# urcl-rs

./: .gitignore  Cargo.toml  Makefile  README.md  index.css  index.html  script.js  tsconfig.json
.github/workflows/: rust.yml  static.yml
examples/: 32b_prime_sieve.urcl  fib.urcl  hello_world.urcl  macros.urcl
pkg/: README.md  package.json  urcl_rs.d.ts  urcl_rs.js  urcl_rs_bg.wasm  urcl_rs_bg.wasm.d.ts
src/: bindings.rs  discord_bot.rs  lib.rs  main.rs
src/emulator/: ast.rs  astgen.rs  emulator.rs  errorcontext.rs  highlighter.rs  lexer.rs  lexer2.rs  mod.rs
src/emulator/devices/: console.rs  mod.rs  screen.rs
src/web/editor/: editor.css  editor.d.ts  editor.js  editor.ts
src/web/scroll-out/: scroll-out.d.ts  scroll-out.js  scroll-out.ts
