[package]
name = "urcl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "*"
strum = "0.24"
strum_macros = "0.24"
num-traits = "0.2.15"
num-derive = "0.3.3"
html-escape = "0.2.13"
serenity = { version = "0.11", optional = true }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"], optional = true }

[profile.release]
lto = true
overflow-checks = false

[profile.dev]
overflow-checks = false

[features]
default = []
bot = ["dep:serenity", "dep:tokio"]